# Gobang

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Doxyfile  Engine.cpp  Engine.h  Game.cpp  Game.h  README.md  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
